Parte 1: Configuracion de MongoDB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=TallerAplicativo_CI-CD_DOSW-1
+
+
+spring.data.mongodb.uri=mongodb+srv://RobinsonPortela:F0dqJg3JHaJWIAf2@fintech.lovfhfs.mongodb.net/?retryWrites=true&w=majority&appName=Fintech
+spring.data.mongodb.database=TallerAplicativo
+
