--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>4.0.0-SNAPSHOT</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.5.3</version>
+        <relativePath/>
+    </parent>
+
 	<groupId>eci.edu.dosw.taller</groupId>
 	<artifactId>TallerAplicativo_CI-CD_DOSW-1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -27,7 +29,7 @@
 		<url/>
 	</scm>
     <properties>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
         <jacoco.version>0.8.13</jacoco.version>
 
         <sonar.projectKey>library</sonar.projectKey>
