--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.application.name=TallerAplicativo_CI-CD_DOSW-1
 spring.data.mongodb.uri=mongodb+srv://RobinsonPortela:F0dqJg3JHaJWIAf2@fintech.lovfhfs.mongodb.net/?retryWrites=true&w=majority&appName=Fintech
 spring.data.mongodb.database=TallerAplicativo
 
+
+spring.security.user.name=admin
+spring.security.user.password=admin123
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
