--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
             **/configs/**,
             **/security/**,
             **/util/**,
-            **/PAWPATROL_BACK/**,
+            **/TallerAplicativoCI_CD_DOSW_1/**,
             **/ClassApplication.class
         </sonar.coverage.exclusions>
 
@@ -50,7 +50,7 @@
             **/configs/**,
             **/security/**,
             **/util/**,
-            **/PAWPATROL_BACK/**,
+            **/TallerAplicativoCI_CD_DOSW_1/**,
             **/ClassApplication.class
         </jacoco.exclusions.pattern>
     </properties>
@@ -158,7 +158,7 @@
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
-            <version>RELEASE</version>
+            <version>23.0.0</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
