--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -36,3 +36,8 @@ jobs:
           app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: target/*.jar
+
+      - name: Show deployed URL
+        run:
+          echo " App deployed at: https://${{ secrets.AZURE_WEBAPP_NAME }}.azurewebsites.net/swagger-ui/index.html"
+
